--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 alabaster==0.7.10
 amqp==2.2.2
+anaconda-client==1.6.9
+anaconda-navigator==1.7.0
+anaconda-project==0.8.2
 appnope==0.1.0
 appscript==1.0.1
 asn1crypto==0.24.0
@@ -13,6 +16,7 @@ beautifulsoup4==4.6.0
 billiard==3.5.0.3
 bitarray==0.8.1
 bkcharts==0.2
+blaze==0.11.3
 bleach==2.1.2
 bokeh==0.12.13
 boto==2.48.0
@@ -23,7 +27,11 @@ cffi==1.11.4
 chardet==3.0.4
 click==6.7
 cloudpickle==0.5.2
+clyent==1.2.2
 colorama==0.3.9
+conda==4.4.10
+conda-build==3.4.1
+conda-verify==2.0.0
 constantly==15.1.0
 contextlib2==0.5.5
 cryptography==2.1.4
@@ -32,6 +40,7 @@ cycler==0.10.0
 Cython==0.27.3
 cytoolz==0.9.0
 dask==0.16.1
+datashape==0.5.4
 decorator==4.2.1
 distributed==1.20.2
 dj-database-url==0.5.0
@@ -89,6 +98,7 @@ mistune==0.8.3
 mpmath==1.0.0
 msgpack-python==0.5.1
 multipledispatch==0.4.9
+navigator-updater==0.1.0
 nbconvert==5.3.1
 nbformat==4.4.0
 networkx==2.1
@@ -99,6 +109,7 @@ numba==0.36.2
 numexpr==2.6.4
 numpy==1.14.0
 numpydoc==0.7.0
+odo==0.5.1
 olefile==0.45.1
 openpyxl==2.4.10
 packaging==16.8
@@ -194,8 +205,7 @@ widgetsnbextension==3.1.0
 wrapt==1.10.11
 xlrd==1.1.0
 XlsxWriter==1.0.2
+xlwings==0.11.5
 xlwt==1.2.0
 zict==0.1.3
 zope.interface==4.5.0
-
-psycopg2==2.7.2
