--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 alabaster==0.7.10
 amqp==2.2.2
+anaconda-client==1.6.9
+anaconda-navigator==1.7.0
 anaconda-project==0.8.2
 appnope==0.1.0
 appscript==1.0.1
@@ -14,19 +16,20 @@ beautifulsoup4==4.6.0
 billiard==3.5.0.3
 bitarray==0.8.1
 bkcharts==0.2
+blaze==0.11.3
 bleach==2.1.2
 bokeh==0.12.13
 boto==2.48.0
 Bottleneck==1.2.1
 celery==4.1.0
-certifi==2018.1.18
+certifi==2018.4.16
 cffi==1.11.4
 chardet==3.0.4
 click==6.7
 cloudpickle==0.5.2
 clyent==1.2.2
 colorama==0.3.9
-conda==4.4.10
+conda==4.5.8
 conda-build==3.4.1
 conda-verify==2.0.0
 constantly==15.1.0
